// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemDetailInfoBar /> should render correctly 1`] = `
<ItemDetailInfoBar
  portfolio={
    Object {
      "display_name": "baz",
      "name": "quux",
    }
  }
  product={
    Object {
      "created_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
      "distributor": "foo",
      "updated_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
    }
  }
  source={
    Object {
      "name": "bar",
    }
  }
>
  <TextContent>
    <div
      className="pf-c-content"
    >
      <Text
        component="h6"
      >
        <h6
          className=""
          data-pf-content={true}
        >
          <span>
            Platform
          </span>
          <br />
          <div
            className="elipsis-text-overflow"
          >
            <span>
              bar
            </span>
          </div>
        </h6>
      </Text>
      <Text
        component="h6"
      >
        <h6
          className=""
          data-pf-content={true}
        >
          <span>
            Portfolio
          </span>
          <br />
          <div
            className="elipsis-text-overflow"
          >
            <span>
              baz
            </span>
          </div>
        </h6>
      </Text>
      <Text
        component="h6"
      >
        <h6
          className=""
          data-pf-content={true}
        >
          <span>
            Vendor
          </span>
          <br />
          <div
            className="elipsis-text-overflow"
          >
            <span>
              foo
            </span>
          </div>
        </h6>
      </Text>
      <Text
        component="h6"
      >
        <h6
          className=""
          data-pf-content={true}
        >
          <span>
            Created at
          </span>
          <br />
          <div
            className="elipsis-text-overflow"
          >
            <span>
              3/22/2019
            </span>
          </div>
        </h6>
      </Text>
    </div>
  </TextContent>
</ItemDetailInfoBar>
`;

exports[`<ItemDetailInfoBar /> should render correctly with fallback values withouth vendor 1`] = `
<ItemDetailInfoBar
  portfolio={
    Object {
      "name": "quux",
    }
  }
  product={
    Object {
      "created_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
    }
  }
  source={
    Object {
      "name": "bar",
    }
  }
>
  <TextContent>
    <div
      className="pf-c-content"
    >
      <Text
        component="h6"
      >
        <h6
          className=""
          data-pf-content={true}
        >
          <span>
            Platform
          </span>
          <br />
          <div
            className="elipsis-text-overflow"
          >
            <span>
              bar
            </span>
          </div>
        </h6>
      </Text>
      <Text
        component="h6"
      >
        <h6
          className=""
          data-pf-content={true}
        >
          <span>
            Portfolio
          </span>
          <br />
          <div
            className="elipsis-text-overflow"
          >
            <span>
              quux
            </span>
          </div>
        </h6>
      </Text>
      <Text
        component="h6"
      >
        <h6
          className=""
          data-pf-content={true}
        >
          <span>
            Created at
          </span>
          <br />
          <div
            className="elipsis-text-overflow"
          >
            <span>
              3/22/2019
            </span>
          </div>
        </h6>
      </Text>
    </div>
  </TextContent>
</ItemDetailInfoBar>
`;

exports[`<ItemDetailInfoBar /> should render correctly with vendor 1`] = `
<ItemDetailInfoBar
  distributor="Foo distributor"
  portfolio={
    Object {
      "display_name": "baz",
      "name": "quux",
    }
  }
  product={
    Object {
      "created_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
      "distributor": "foo",
      "updated_at": "Fri Mar 22 2019 08:36:57 GMT+0100 (Central European Standard Time)",
    }
  }
  source={
    Object {
      "name": "bar",
    }
  }
>
  <TextContent>
    <div
      className="pf-c-content"
    >
      <Text
        component="h6"
      >
        <h6
          className=""
          data-pf-content={true}
        >
          <span>
            Platform
          </span>
          <br />
          <div
            className="elipsis-text-overflow"
          >
            <span>
              bar
            </span>
          </div>
        </h6>
      </Text>
      <Text
        component="h6"
      >
        <h6
          className=""
          data-pf-content={true}
        >
          <span>
            Portfolio
          </span>
          <br />
          <div
            className="elipsis-text-overflow"
          >
            <span>
              baz
            </span>
          </div>
        </h6>
      </Text>
      <Text
        component="h6"
      >
        <h6
          className=""
          data-pf-content={true}
        >
          <span>
            Vendor
          </span>
          <br />
          <div
            className="elipsis-text-overflow"
          >
            <span>
              foo
            </span>
          </div>
        </h6>
      </Text>
      <Text
        component="h6"
      >
        <h6
          className=""
          data-pf-content={true}
        >
          <span>
            Created at
          </span>
          <br />
          <div
            className="elipsis-text-overflow"
          >
            <span>
              3/22/2019
            </span>
          </div>
        </h6>
      </Text>
    </div>
  </TextContent>
</ItemDetailInfoBar>
`;
